[package]
name = "hyde"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

clap = "4.0"
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
pulldown-cmark = { version = "0.9", features = [ "simd" ] }
tree-sitter-highlight = "0.20"
tree-sitter-c = "0.20"
tree-sitter-cpp = "0.20"
tree-sitter-rust = "0.20"
tree-sitter-toml = "0.20"
