[package]
name = "hyde"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
axum = "0.6"
clap = { version = "4.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
hyper = { version = "0.14", features = ["full"] }
include_dir = "0.7"
lazy_static = "1.4"
pulldown-cmark = { version = "0.9", features = [ "simd" ] }
regex = "1.7"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tokio = { version = "1.24", features = ["full"] }
toml = "0.5"
tower = "0.4"
tree-sitter-highlight = "0.20"
tree-sitter-c = "0.20"
tree-sitter-cpp = "0.20"
tree-sitter-rust = "0.20"
tree-sitter-toml = "0.20"
upon = "0.6"
